Changes in 1.1:
  o API Changes:
    * Exposed deleteAcl and added a listAcls method to conary client.
  o Server Changes:
    * Entitlement classes can now provide access to multiple access
      groups (and updated the web ui to support that) (CNY-600)
    * addEntitlement and deleteEntitlement repository calls replaced 
      by addEntitlements and deleteEntitlements calls
    * Added getTroveLeavesByPath and getTroveVersionsByPath. (for CNY-74)
    * Added a separate acl permission for being able to remove troves from
      a repository and updated the web UI to support it
    * Conary now checks to ensure you have write access to all the things
      you're trying to commit before you send them across the wire. (CNY-616)

  o Client Changes:
    * conary rq now --path, which allows you to search for troves in the 
      repository by path. (CNY-74)

Changes in @NEW@:
  o Server Changes:
    * The server binary access log can now be downloaded by an
      administrator by visiting the http://servername/conary/log
      URL. Once the log is accessed it is rotated automatically by the
      repository server. Subsequent accesses to the log URL will only
      yield log entries added since the last access. (CNY-638)
    * The Users and Groups tab in the web management UI is no longer
      highlighted when administrators change their passwords.

  o Client Changes:
    * A --what-provides option has been added to "conary query" and
      "conary repquery"
    * A bug that installed all components of a package that is
      installed instead of updated due to the existing package being
      pinned has been fixed. (CNY-682)

  o Bug Fixes:
    * The Conary Repository web interface no longer returns a
      HTTP_FORBIDDEN (403) when a bad password is given by the user.
      This allows the user to re-try authentication.
    * The --signatures and --buildreqs flags now work with conary
      showcs.  (CNY-642)